--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,6 @@
-name: CI
+# .github/workflows/tests.yml
+name: test
 on: [push, pull_request]
-
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -8,7 +8,12 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
-      - run: pip install -r requirements.txt
-      - run: ruff check .
-      - run: pytest -q
+          python-version: "3.11"
+      - name: Install deps
+        run: pip install -r requirements.txt
+      - name: Install package (src layout)
+        run: pip install -e .
+      - name: Ruff check
+        run: ruff check .
+      - name: Run tests
+        run: pytest -q
