--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,6 +33,9 @@ jobs:
       - name: Install build backend
         run: python -m pip install --upgrade pip build
 
+      - name: Clean dist
+        run: rm -rf dist
+
       - name: Build sdist & wheel
         run: python -m build
 
