--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,92 +2,117 @@
 name: publish
 
 on:
-  # Lancement manuel
   workflow_dispatch:
-  # Publication automatique quand on pousse un tag v*
   push:
+    branches:
+      - dev
     tags:
-      - 'v*'
+      - 'v*'    # on publiera PyPI seulement si le tag est stable et attaché à main (voir garde-fou)
 
-# Permissions OIDC pour Trusted Publishers
 permissions:
   contents: read
   id-token: write
 
 jobs:
   # =========================
-  # Publier sur TestPyPI
-  # - en workflow_dispatch
-  # - sur tags pré-release (vX.Y.Z-rcN, vX.Y.Z-aN, etc.)
+  # Dev -> TestPyPI
   # =========================
   publish-testpypi:
     runs-on: ubuntu-latest
-    # Garde l'environment "testpypi" si tu l'utilises (sinon supprime cette ligne)
     environment: testpypi
-    if: >
-      github.event_name == 'workflow_dispatch' ||
-      (startsWith(github.ref, 'refs/tags/v') && contains(github.ref_name, '-'))
+    if: github.ref_type == 'branch' && github.ref_name == 'dev'
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with: { python-version: '3.11' }
       - name: Upgrade build tooling
         run: |
           python -m pip install --upgrade pip
           pip install --upgrade build twine
-
       - name: Clean dist
         run: rm -rf dist
-
       - name: Build sdist & wheel
         run: python -m build
-
+      - name: Ensure pre-release version (dev/a/b/rc)
+        run: |
+          VERSION=$(python - <<'PY'
+          import importlib.metadata as m, sys, pathlib
+          # essaie pyproject.toml via setuptools_scm/poetry/PEP 621 ; sinon fallback package
+          # simple heuristique : lit version depuis dist metadata
+          import os, glob, zipfile
+          whls = glob.glob("dist/*.whl")
+          if not whls: sys.exit("No wheel built")
+          namever = os.path.basename(whls[0]).split('-')[1]
+          print(namever)
+          PY
+          )
+          echo "Version: $VERSION"
+          python - <<PY
+          import re, os, sys
+          v = os.environ["VERSION"]
+          if not re.search(r'(a|b|rc|dev)\d*', v):
+              print(f"ERROR: {v} n'est pas une pré-release (attendu .devN, aN, bN ou rcN).")
+              sys.exit(1)
+          PY
       - name: Twine check
         run: python -m twine check dist/*
-
       - name: Publish to TestPyPI (Trusted Publisher)
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           repository-url: https://test.pypi.org/legacy/
 
   # =========================
-  # Publier sur PyPI (prod)
-  # - uniquement pour tags finals vX.Y.Z
+  # Tag -> PyPI (stable)
   # =========================
   publish-pypi:
     runs-on: ubuntu-latest
-    # IMPORTANT: mets ici l’environment déclaré côté PyPI (souvent "pypi")
-    # ou supprime la ligne si tu n'as pas configuré d'environment dans PyPI.
-    environment: pypi
-    if: startsWith(github.ref, 'refs/tags/v') && !contains(github.ref_name, '-')
+    environment: pypi   # fais correspondre au nom configuré côté PyPI, ou supprime la ligne si aucun
+    # 1) il faut un tag v*
+    # 2) le tag NE doit PAS être une pré-release
+    # 3) le tag doit pointer sur main (garde-fou)
+    if: |
+      github.ref_type == 'tag' &&
+      startsWith(github.ref_name, 'v') &&
+      !contains(github.ref_name, '-')     # exclut rc/a/b/dev
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/checkout@v4
         with:
-          python-version: '3.11'
-
+          fetch-depth: 0   # nécessaire pour la vérification "tag sur main"
+      - name: Verify tag is on main
+        run: |
+          git fetch origin main
+          if ! git merge-base --is-ancestor origin/main "$GITHUB_SHA"; then
+            echo "Le tag n'est pas attaché à main → abandon."
+            exit 1
+          fi
+      - uses: actions/setup-python@v5
+        with: { python-version: '3.11' }
       - name: Upgrade build tooling
         run: |
           python -m pip install --upgrade pip
           pip install --upgrade build twine
-
       - name: Clean dist
         run: rm -rf dist
-
       - name: Build sdist & wheel
         run: python -m build
-
+      - name: Ensure stable version (no pre-release)
+        run: |
+          VERSION=$(python - <<'PY'
+          import os, glob
+          whl = sorted(glob.glob("dist/*.whl"))[0]
+          print(os.path.basename(whl).split('-')[1])
+          PY
+          )
+                    echo "Version: $VERSION"
+                    python - <<PY
+          import re, os, sys
+          v = os.environ["VERSION"]
+          if re.search(r'(a|b|rc|dev)\d*', v):
+              print(f"ERROR: {v} est une pré-release; attendu version stable.")
+              sys.exit(1)
+          PY
       - name: Twine check
         run: python -m twine check dist/*
-
       - name: Publish to PyPI (Trusted Publisher)
         uses: pypa/gh-action-pypi-publish@release/v1
-        # Ne PAS définir repository-url ici (par défaut = PyPI prod)
+        # pas de repository-url → PyPI prod
